# Computer-Graphics-2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cgv/: define_system_variables.bat
cgv/3rd/jpeg/: CMakeLists.txt
cgv/3rd/png/: CMakeLists.txt
cgv/3rd/webserver/: UrlHelper.cpp  webserver.cpp
cgv/3rd/zlib/: CMakeLists.txt
data/Implicits/: box.isd  cylinder.isd  difference.isd  distance_surface.isd  intersection.isd  sphere.isd  union.isd
exercise0/: CMakeLists.txt  cgv_demo.cxx  config.def  cubes_drawable.cxx  cubes_fractal.cxx  cubes_fractal.h  task0_framework.pj
exercise1/: CMakeLists.txt  box.cxx  config.def  csg.cxx  cylinder.cxx  distance_surface.cxx  distance_surface.h  gl_implicit_surface_drawable.cxx  gl_implicit_surface_drawable.h  implicit_base.h  implicit_group.cxx  implicit_group.h  implicit_primitive.cxx  knot_vector.cxx  knot_vector.h  numeric_gradient.cxx  scene.cxx  skeleton.cxx  skeleton.h  sphere.cxx  task1_implicits.pj  transform.cxx
exercise34/: Animation.cxx  Animation.h  AtomicTransform.cxx  AtomicTransform.h  Bone.cxx  Bone.h  CMakeLists.txt  DataStore.cxx  DataStore.h  IKViewer.cxx  IKViewer.h  Init.cxx  Mesh.cxx  Mesh.h  Skeleton.cxx  Skeleton.h  SkeletonViewer.cxx  SkeletonViewer.h  SkinnedMeshViewer.cxx  SkinnedMeshViewer.h  common.h  config.def  skinning.glfs  skinning.glgs  skinning.glvs  task34_animation.pj
solution/: config_ex0.cfg  config_ex1.cfg  config_ex34.cfg  run_exercise0.bat  run_exercise0.sh  run_exercise1.bat  run_exercise1.sh  run_exercise34.bat  run_exercise34.sh
solution/glsl/: sphere.glfs  sphere.glpr
(+249 files in other folders)
